No longer scrolls to top of page when menu is active on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ a.btn {
 	margin-bottom: 14px;
 }
 .no-scroll {
-	position: fixed;
+	position: absolute;
 	overflow: hidden;
 }
 .border {
